--- a/_posts/2020-02-05-homl5.md
+++ b/_posts/2020-02-05-homl5.md
@@ -73,7 +73,8 @@ poly_kernel_svm_clf.fit(X,y)
 
 위 코드에서는 3차 다항식이 되도록 사용했다. 모델이 과대적합이라면 다항식의 차수를 줄여야 하며, 과소적합이라면 다항식의 차수를 늘려야 한다. 하이퍼파라미터 coef0는 모델이 높은 차수와 낮은 차수에 얼마나 영향을 받을지 조절한다.
 
-**유사도 특성 추가** : 유사도 특성 추가는 비선형 특성을 다루는 또 다른 기법이다. 샘플이 특정 **랜드마크** (landmark)와 얼마나 닮았는지 측정하는 **유사도 함수** (similarity function) 로 계산한 특성을 추가한다. 유사도 함수는 다음과 같다.
+- **유사도 특성 추가** : 유사도 특성 추가는 비선형 특성을 다루는 또 다른 기법이다. 샘플이 특정 **랜드마크** (landmark)와 얼마나 닮았는지 측정하는 **유사도 함수** (similarity function) 로 계산한 특성을 추가한다. 유사도 함수는 다음과 같다.
+
 $$
 \phi_\gamma (\mathbf{x}, l) = \exp(-\gamma\vert\vert\mathbf{x}-l\vert\vert^2)
 $$
@@ -149,7 +150,7 @@ $$
 
 
 
-- **목적 함수** : 위에서 나타난 결정 함수의 기울기는 가중치 벡터 $||\mathbf{w}||$ 의 노름과 같다. 아래의 그림에서 가중치 벡터 $\mathbf{w}$ 가 작을수록 마진이 커지는 것을 볼 수 있다. 마진을 크게 하기 위해 $||\mathbf{w}||$ 를 최소화 한다고 하자. 이 과정에서 마진 오류를 하나도 만들지 않으려면(하드 마진), 결정 함수가 모든 양성 훈련 샘플에서는 1보다 커야 하고 음성 훈련 샘플에서는 -1보다 작아야 한다. 즉 음성 샘플 $y^{(i)} = 0$ 일 때 $t^{(i)} = -1$ 로, 양성 샘플 $y^{(i)} = 1$ 일 때 $t^{(i)} = 1$ 로 정의하면, 앞서 말한 모든 제약 조건은 샘플에서 아래와 같은 식으로 표현할 수 있다.
+- **목적 함수** : 위에서 나타난 결정 함수의 기울기는 가중치 벡터 $\vert\vert\mathbf{w}\vert\vert$ 의 노름과 같다. 아래의 그림에서 가중치 벡터 $\mathbf{w}$ 가 작을수록 마진이 커지는 것을 볼 수 있다. 마진을 크게 하기 위해 $\vert\vert\mathbf{w}\vert\vert$ 를 최소화 한다고 하자. 이 과정에서 마진 오류를 하나도 만들지 않으려면(하드 마진), 결정 함수가 모든 양성 훈련 샘플에서는 1보다 커야 하고 음성 훈련 샘플에서는 -1보다 작아야 한다. 즉 음성 샘플 $y^{(i)} = 0$ 일 때 $t^{(i)} = -1$ 로, 양성 샘플 $y^{(i)} = 1$ 일 때 $t^{(i)} = 1$ 로 정의하면, 앞서 말한 모든 제약 조건은 샘플에서 아래와 같은 식으로 표현할 수 있다.
 
 $$
 \begin{gather}
@@ -170,15 +171,15 @@ $$
 - 소프트 마진 분류기의 목적 함수
 
 $$
-\begin{gather}
 \text{minimize} \quad \frac{1}{2}\mathbf{w}^T \cdot \mathbf{w} + C \sum^m_{i=1} \zeta^{(i)} \\ \text{subject to} \quad t^{(i)}(\mathbf{w}^T \mathbf{x}^{(i)} + b) \geq 1 - \zeta^{(i)} \qquad \text{for i}= 1, 2, ..., m
-\end{gather}
 $$
+
+
 
 - 하드 마진과 소프트 마진 문제처럼 선형적인 제약 조건이 있는 볼록 함수의 이차 최적화 문제를 일컬어 **콰드라틱 프로그래밍** (Quadratic Programming, QP) 문제라고 한다. QP 문제를 해결하는 일반적인 문제 공식은 다음과 같다.
 
 $$
-\text{minimize} \frac{1}{2} \mathbf{p}^T \cdot \mathbf{H} \cdot \mathbf{p} + \mathbf{f}^T \cdot \mathbf{p} \qquad \text{when } \mathbf{A} \cdot \mathbf{p} \leq \mathbf{b}
+\text{minimize} \quad \frac{1}{2} \mathbf{p}^T \cdot \mathbf{H} \cdot \mathbf{p} + \mathbf{f}^T \cdot \mathbf{p} \qquad \text{when } \mathbf{A} \cdot \mathbf{p} \leq \mathbf{b}
 $$
 
 > $\mathbf{p}$ : $n_p$ 차원의 벡터 ($n_p = $ 모델 파라미터 수)
@@ -204,4 +205,4 @@ $$
 ​                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
 
 [^1]: 어떤 커널을 먼저 사용해야 할 까? 대개 선형 커널을 1순위로 사용하며, 훈련 세트가 너무 크지 않다면 가우시안 RBF 커널을 시도해볼 수 있다.
-[^2]: $||\mathbf{w}||$ 를 최소화하는 대신 $\frac{1}{2}||\mathbf{w}||^2$ 인 $\frac{1}{2} \mathbf{w}^T \cdot \mathbf{w}$ 를 최소화 한다. (결과는 같지만 후자가 미분하기가 더 깔끔하다.)
+[^2]: $\vert\vert\mathbf{w}\vert\vert$ 를 최소화하는 대신 $\frac{1}{2}\vert\vert\mathbf{w}\vert\vert^2$ 인 $\frac{1}{2} \mathbf{w}^T \cdot \mathbf{w}$ 를 최소화 한다. (결과는 같지만 후자가 미분하기가 더 깔끔하다.)
