--- a/_posts/2020-01-28-homl1.md
+++ b/_posts/2020-01-28-homl1.md
@@ -27,7 +27,7 @@ tag: Machine-Learning
 
 - 지도학습과 비지도 학습
 
-  - 지도 학습(Supervised Learning) : 알고리즘에 주입하는 훈련 데이터에 __레이블__ (label)이라는 원하는 답이 포함된다. ( _분류, 회귀 등_ )
+  - **지도 학습** (Supervised Learning) : 알고리즘에 주입하는 훈련 데이터에 __레이블__ (label)이라는 원하는 답이 포함된다. ( _분류, 회귀 등_ )
     - k - 최근접 이웃(k-Nearest Neighbors, kNN)
     - 선형 회귀(Linear Regression)
     - 로지스틱 회귀(Logistic Regression)
@@ -35,14 +35,14 @@ tag: Machine-Learning
     - 결정 트리(Decision Tree)와 랜덤 포레스트(Random Forest)
     - 신경망(Neural Networks)
 
-  - 비지도 학습(Unsupervised Learning) : 시스템이 아무런 도움(레이블 사전 주입)없이 학습한다.
+  - **비지도 학습** (Unsupervised Learning) : 시스템이 아무런 도움(레이블 사전 주입)없이 학습한다.
     - 군집(Clustering) : k-평균(k-Means), 계층 군집 분석(Hierarchical Cluster Analysis, HCA), 기댓값 최대화(Expectation Maximization)
     - 시각화(Visualization)와 차원축소(Dimensionality reduction) : 주성분 분석(Principal Component Analysis, PCA), 커널 PCA(kernal PCA), 지역적 선형 임베딩(Locally-Linear Embedding, LLE), t-SNE(t-distributed Stochastic Neighbor Embedding)
     - 연관 규칙 학습(Association rule learning) : 아프리오리(Apriori), 이클렛(Eclat)
 
-  - 준지도 학습과 강화 학습  _(내용 추가 바람)_
-    - 준지도 학습
-    - 강화 학습
+  - **준지도 학습** (Semisupervised Learning)과 **강화 학습** (Reinforcement Learning)
+    - 준지도 학습 : 어떤 알고리즘은 레이블이 일부만 있더라도 적용할 수 있다. 이를 준지도 학습이라고 한다. 대부분의 준지도 학습 알고리즘은 지도 학습과 비지도 학습의 조합으로 이루어져 있다. 예를 들어, **심층 신뢰 신경망** (Deep Belief Network, DBN)은 여러 겹으로 쌓은 제한된 볼츠만 머신(Restricted Boltzmann Machine, RBM)이라 불리는 비지도 학습에 기초한다.
+    - 강화 학습 : 강화학습에서는 학습하는 시스템을 **에이전트** 라고 부르며 환경을 관찰해서 행동을 실행하고 그 결과로 보상(혹은 벌점)을 받는다. 시간이 지나면서 가장 큰 보상을 얻기 위해서 정책이라고 부르는 최상의 전략을 스스로 학습한다. 정책은 주어진 상황에서 에이전트가 어떤 행동을 선택해야 할 지 정의한다.
 
 - 배치 학습과 온라인 학습
   - 배치 학습 : 데이터 셋을 미리 준비한 뒤 모든 데이터를 사용하여 학습. 방법이 간단하지만, 시스템이 빠르게 변화해야 하는 상황 혹은 너무 많은 데이터를 사용해야 하는 상황에서는 시간이 너무 지연된다. 이럴 때는 점진적으로 학습하는 알고리즘을 사용해야 한다.
