--- a/_posts/2020-01-29-homl2.md
+++ b/_posts/2020-01-29-homl2.md
@@ -18,7 +18,7 @@ tag: Machine-Learning
   - __평균 제곱근 오차__ (Root Mean Square Error, RMSE)
 
   $$
-  RMSE(\mathbb{X},h) = \sqrt{\frac{1}{m}\sum_i^m(h(\mathbb{X^i}-y^i))^2}
+  RMSE(\mathbf{X},h) = \sqrt{\frac{1}{m}\sum_i^m(h(\mathbf{X^i}-y^i))^2}
   $$
 
   $m$ : 측정 데이터셋에 있는 샘플 수
@@ -29,12 +29,12 @@ tag: Machine-Learning
 
   $h$ : 시스템의 예측 함수, 가설이라고도 함
 
-  $RMSE(\mathbb{X},h)$ 는 가설h를 사용하여 샘플을 평가하는 __비용함수(Cost Function)__
+  $RMSE(\mathbf{X},h)$ 는 가설h를 사용하여 샘플을 평가하는 __비용함수(Cost Function)__
 
   - __평균 절대 오차__ (Mean Absolute Error, MAE) : 이상치로 보이는 구역이 많은 경우에 사용할 수 있다.
 
   $$
-  MAE(\mathbb{X},h) = \frac{1}{m}\sum_i^m|h(\mathbb{X^i}-y^i)|
+  MAE(\mathbf{X},h) = \frac{1}{m}\sum_i^m \vert h(\mathbf{X^i}-y^i)\vert
   $$
 
   RMSE와 MAE 모두 예측값의 벡터와 타깃값의 벡터 사이의 거리를 재는 방법. 다만 둘의 거리 측정 방법인 노름(norm)이 다르다. 노름에 대한 정보는 [김태완님 블로그](http://taewan.kim/post/norm/) 를 참조하자.
@@ -61,9 +61,9 @@ tag: Machine-Learning
 
 - 데이터 정제 : NaN값 처리하기
 
-  - 해당 구역을 삭제하는 방법 -  .dropna()
-  - 전체 특성을 삭제하는 방법 -  .drop()
-  - 특정 값으로 채우는 방법(0, 평균, 중간값 등) - .fillna()
+  - 해당 구역을 삭제하는 방법 -  `.dropna()`
+  - 전체 특성을 삭제하는 방법 -  `.drop()`
+  - 특정 값으로 채우는 방법(0, 평균, 중간값 등) - `.fillna()`
   - 사이킷런에서는 Imputer를 사용하여 NaN값을 쉽게 다룰 수 있다.
 
   ```python
