--- a/_posts/2020-01-30-homl3.md
+++ b/_posts/2020-01-30-homl3.md
@@ -142,8 +142,8 @@ f1_score(y_train_5, y_train_pred)
 
 - 이진 분류만 가능한 가능한 분류기 : 서포트 벡터 머신(SVM), 선형 분류기 등
 
-  - 일대다(One-versus-All, OvA) 전략 : 특정 클래스 하나만 구분하는 이진 분류기 10개를 훈련시켜 결정 점수 중에서 가장 높은 클래스를 선택하는 방법
-  - 일대일(One-versus-One, OvO) 전략 : 각 클래스의 조합마다 이진 분류기를 훈련시키는 것. 클래스가 $N$ 개일 경우 $N*(N-1)/2$ 개의 이진 분류기가 필요함.
+  - **일대다** (One-versus-All, OvA) 전략 : 특정 클래스 하나만 구분하는 이진 분류기 10개를 훈련시켜 결정 점수 중에서 가장 높은 클래스를 선택하는 방법
+  - **일대일** (One-versus-One, OvO) 전략 : 각 클래스의 조합마다 이진 분류기를 훈련시키는 것. 클래스가 $N$ 개일 경우 $N*(N-1)/2$ 개의 이진 분류기가 필요함.
   - SVM 같은 특정 이진 분류 알고리즘은 훈련 세트의 크기에 민감하기 때문에 훈련 세트가 작은 OvO를 선호하지만, 대부분의 이진분류 알고리즘은 OvA를 선호한다. 사이킷런에서 OvO나 OvA를 사용하도록 강제하려면 OneVsOneClassifier나 OneVsRestClassifier를 사용한다. 예를 들어, SGDClassifier로 OvO 전략을 사용하고자 한다면 다음과 같은 코드를 사용하면 된다.
 
   ```python
