--- a/_posts/2020-01-29-homl2.md
+++ b/_posts/2020-01-29-homl2.md
@@ -64,7 +64,7 @@ tag: Machine-Learning
   - 해당 구역을 삭제하는 방법 -  `.dropna()`
   - 전체 특성을 삭제하는 방법 -  `.drop()`
   - 특정 값으로 채우는 방법(0, 평균, 중간값 등) - `.fillna()`
-  - 사이킷런에서는 Imputer를 사용하여 NaN값을 쉽게 다룰 수 있다.
+  - 사이킷런에서는 `Imputer` 클래스를 사용하여 NaN값을 쉽게 다룰 수 있다.
 
   ```python
   from sklearn.preprocessing import Imputer
@@ -112,7 +112,7 @@ tag: Machine-Learning
   #(책에는 나와있지 않지만) pandas의 .get_dummies()를 활용하여 원-핫 인코딩을 진행하는 방법도 있다.
   ```
 
-- 특성 스케일링 : 머신러닝 알고리즘은 숫자 특성들의 스케일이 많이 다르면 잘 작동하지 않는다. 따라서 값들의 스케일이 많이 차이나는 경우 특성의 범위를 통일하기 위한 방법을 사용한다.
+- **특성 스케일링** : 머신러닝 알고리즘은 숫자 특성들의 스케일이 많이 다르면 잘 작동하지 않는다. 따라서 값들의 스케일이 많이 차이나는 경우 특성의 범위를 통일하기 위한 방법을 사용한다.
 
   - min-max 스케일링(정규화, normalization) : 사이킷런에서는 MinMaxScaler 변환기를 제공한다. feature_range 매개변수를 따로 설정하여 설정 범위를 (0,1)에서 다른 것으로 바꿀 수도 있다.
 
@@ -126,9 +126,19 @@ tag: Machine-Learning
   Z = \frac{\bar{X}-m}{\sigma}
   $$
 
-- 변환 파이프라인 : 연속된 변환을 순서대로 처리할 수 있도록 도와주는 Pipeline 클래스.
+- 변환 파이프라인 : 연속된 변환을 순서대로 처리할 수 있도록 도와주는 `Pipeline` 클래스. `Pipeline` 을 이용하면 데이터의 전처리와 머신러닝 학습 과정을 통일된 API 기반에서 처리할 수 있어 더욱 직관적인 ML 모델 코드를 생성할 수 있다. 일반적으로 사이킷런의 `Pipeline` 은 텍스트 기반의 피처 벡터화 뿐만 아니라 모든 데이터의 전처리 작업과 Estimator를 결합할 수 있다.
 
+```python
+from sklearn.pipeline import Pipeline
 
+pipeline = Pipeline([
+    ('tfidf_vect', TfidVectorizer(stop_words='english', ngram_range=(1,2), max_df=300)),
+    ('lr_clf', LogisticRegression(C=10))
+])
+# 
+```
+
+`Pipeline` 에 대한 설명과 코드는 [파이썬 머신러닝 완벽 가이드](http://www.yes24.com/Product/Goods/87044746?scode=032&OzSrank=1), 권철민, 위키북스, 2019 를 참고하였습니다.
 
 <br/>
 
@@ -137,17 +147,43 @@ tag: Machine-Learning
 - 훈련 세트에서 훈련하고 평가하기
   - 1장에서 말했듯 훈련 세트에서 훈련한 것으로 1번의 테스트 세트를 통한 평가를 받고 제품을 출시하기엔 너무 많은 위험이 있다. 따라서 아래와 같이 훈련 세트 내에 검증을 위한 세트를 만들어 테스트 세트 이전에 평가를 받는다. 
 - 교차 검증을 사용한 평가 : K-겹 교차 검증
-  - '폴드(fold)'라고 불리는 K개의 서브셋으로 무작위로 분할한 후 그 중 하나를 검증 세트로 하는 K개의 데이터 셋을 만든다.<br/> (이미지 추가하기)
+  - '폴드(fold)'라고 불리는 K개의 서브셋으로 무작위로 분할한 후 그 중 하나를 검증 세트로 하는 K개의 데이터 셋을 만든다. (아래 그림에서의 Test set는 Validation set과 같은 의미이다.)
+
+<p align="center"><img src="https://cdn-images-1.medium.com/max/1600/1*rgba1BIOUys7wQcXcL4U5A.png" alt="KFold" style="zoom:50%;" /></p>
+
+사이킷런에서는 K-겹 교차검증을 위해 `KFold` 와 `StratifiedKFold` 클래스를 제공하고 있다. `StratifedKFold` 는 데이터셋의 불균형한 분포도를 가진 레이블 데이터 집합을 위한 K폴드 방식이다. 아래는 사이킷런에서 이들을 적용할 수 있는 코드이다.
+
+```python
+from sklearn.model_selection import KFold
+kfold = KFold(n_split=5)
+# n_split은 몇 개의 서브셋으로 나눌 것인지에 대한 수치이다. 아래는 StratifiedKFold를 적용하는 코드이다.
+from sklearn.model_selection import StratifiedKFold
+skfold = StratifiedKFold(n_split=5)
+```
 
 <br/>
 
 ## 6) 모델 세부 튜닝
 
 - 세부 튜닝 방법
-  - 그리드 탐색 : 우리의 탐색 방법에 맞는 하이퍼 파라미터를 찾아야 합니다. 사이킷런에서는 이를 위한 _GridSearchCV_ 라는 API를 제공한다. _GridSearchCV_ 는 가능한 모든 하이퍼 파라미터 조합을 탐색하고 그 조합에 대해 모두 교차 검증을 사용한다.
+  - **그리드 탐색** (GridSearchCV) : 우리의 탐색 방법에 맞는 하이퍼 파라미터를 찾아야 합니다. 사이킷런에서는 이를 위한 `GridSearchCV` 라는 API를 제공한다. `GridSearchCV` 는 가능한 모든 하이퍼 파라미터 조합을 탐색하고 그 조합에 대해 모두 교차 검증을 사용한다. 아래는 사이킷런에서 `GridSearchCV` 를 적용할 수 있는 코드이다
+
+```python
+from sklearn.model_selection import GridSearchCV
+
+grid_parameters = {'hyper_para1':[1, 2, 3],
+                  'hyper_para2':[5,7],
+                  }
+grid_model = GridSearchCV(model_name, param_grid=grid_parameters, cv=5, refit=True)
+#hyper_para는 하이퍼파라미터이며 적용하는 머신러닝 모델(model_name)에 따라 달라질 수 있다.
+#refit이 True일 경우 가장 성능이 좋은 하이퍼파라미터 설정으로 재학습시킨다.
+```
+
+
+
 - 랜덤 탐색
-  - 하이퍼 파라미터의 조합의 개수가 많아지면 _GridSearchCV_ 를 사용하기에 컴퓨터 자원이 너무 많이 소모된다. 그럴 때는 _RandomizedSearchCV_ 를 사용하는 것이 좋다. 후자는 모든 조합 대신 임의의 수를 대입하여 지정한 횟수만큼 평가를 진행한다. 예를 들어, 랜덤 탐색을 1,000회 반복하도록 실행하면 하이퍼파라미터마다 각기 다른 1,000개의 값을 탐색한다.
+  - 하이퍼 파라미터의 조합의 개수가 많아지면 `GridSearchCV` 를 사용하기에 컴퓨터 자원이 너무 많이 소모된다. 그럴 때는 `RandomizedSearchCV` 를 사용하는 것이 좋다. 후자는 모든 조합 대신 임의의 수를 대입하여 지정한 횟수만큼 평가를 진행한다. 예를 들어, 랜덤 탐색을 1,000회 반복하도록 실행하면 하이퍼파라미터마다 각기 다른 1,000개의 값을 탐색한다.
 - 앙상블(Ensemble) 방법 : 최상의 모델들을 연결하여 더 나은 성능을 발휘하는 그룹을 만드는 방법.
 - 최상의 모델과 오차분석
-- 테스트 세트로 시스템 평가 : 테스트 세트에서 최종 모델을 평가해본다. 이 과정에서 테스트 세트에서 성능이 약간 낮아진다고 하이퍼 파라미터를 다시 수정하면 안된다. 만약 수정하면 테스트 세트에 대한 성능을 올라갈 지 모르나, 새로운 데이터에 대해서는 일반화 되기 어렵기 때문.
+- 테스트 세트로 시스템 평가 : 테스트 세트에서 최종 모델을 평가해본다. 이 과정에서 테스트 세트에서 성능이 약간 낮아진다고 하이퍼 파라미터를 다시 수정하면 안된다. 만약 수정하면 테스트 세트에 대한 성능은 올라갈 지 모르지만, 새로운 데이터에 대해서는 일반화 되기 어렵기 때문이다.
 
