--- a/_posts/2020-01-30-homl3.md
+++ b/_posts/2020-01-30-homl3.md
@@ -64,7 +64,7 @@ sgd_clf.fit(X_train, y_train_5)
 
   ※ (특히 불균형한 데이터에서는) __정확도를 분류기의 성능 측정 지표로 선호하지 않는다.__ 
 
-- 오차 행렬 : 분류기의 성능을 평가하는 더 좋은 방법. '0'이 '1'로 잘못 분류된 횟수를 센다. 오차 행렬을 만들기 위해서는 실제 타깃과 비교할 수 있도록 먼저 예측값을 만들어야 한다. 사이킷런에서는 cross_val_predict() 함수를 제공한다.
+- **오차 행렬** : 분류기의 성능을 평가하는 더 좋은 방법. '0'이 '1'로 잘못 분류된 횟수를 센다. 오차 행렬을 만들기 위해서는 실제 타깃과 비교할 수 있도록 먼저 예측값을 만들어야 한다. 사이킷런에서는 cross_val_predict() 함수를 제공한다.
 
   ```python
   from sklearn.model_selection import cross_val_predict
@@ -88,7 +88,7 @@ sgd_clf.fit(X_train, y_train_5)
   - __정밀도__ (Precision)
 
   $$
-  Precision = \frac{TP}{TP+FP}
+  \text{Precision} = \frac{\text{TP}}{\text{TP+FP}}
   $$
 
   ​			$TP$ : 진짜 양성의 수,  $FP$ : 거짓 양성의 수
@@ -96,15 +96,15 @@ sgd_clf.fit(X_train, y_train_5)
   - __재현율__ (Recall) : 민감도(sensitivity) 또는 진짜 양성 비율(true positive)이라고도 함
   
   $$
-  Recall = \frac{TP}{TP+FN}
+  \text{Recall} = \frac{\text{TP}}{\text{TP+FN}}
   $$
 
-  ​	$FN$ : 거짓 음성의 수
+  ​			$FN$ : 거짓 음성의 수
 
   - __F1 점수__ (F1 Score) : 정밀도와 재현율의 조화평균으로 구해진다
   
   $$
-F = \frac{2}{(1/Precision)+(1/Recall)} = \frac{TP}{TP+\frac{FN+FP}{2}}
+F = \frac{2}{(1/\text{Precision})+(1/\text{Recall})} = \frac{\text{TP}}{\text{TP}+\frac{\text{FN+FP}}{2}}
   $$
 
   사이킷런에서는 F1 점수를 계산하는 f1_score() 함수를 제공한다.
@@ -114,23 +114,43 @@ F = \frac{2}{(1/Precision)+(1/Recall)} = \frac{TP}{TP+\frac{FN+FP}{2}}
 f1_score(y_train_5, y_train_pred)
   ```
   
-  - __정밀도/재현율 트레이드오프__ : 정밀도를 올리면 재현율이 줄고, 재현율을 높이면 정밀도가 내려가기 마련. 특정 수치가 강조되어야 할 경우에는 분류의 결정 임곗값(Threshold)을 설정하여 정밀도 또는 재현율의 수치를 확보할 수 있다. 사이킷런의 분류 알고리즘은 개별 레이블 별로 결정 확률을 구한 후, 예측 확률이 큰 쪽을 예측하게 된다. (이진 분류기의 경우 50:50.) 사이킷런에서는 예측 확률을 반환하는 predict_proba() 메서드를 제공한다.  
+  - __정밀도/재현율 트레이드오프__ : 정밀도를 올리면 재현율이 줄고, 재현율을 높이면 정밀도가 내려가기 마련. 특정 수치가 강조되어야 할 경우에는 분류의 결정 임곗값(Threshold)을 설정하여 정밀도 또는 재현율의 수치를 확보할 수 있다. 사이킷런의 분류 알고리즘은 개별 레이블 별로 결정 확률을 구한 후, 예측 확률이 큰 쪽을 예측하게 된다. (이진 분류기의 경우 50:50.) 사이킷런에서는 예측 확률을 반환하는 `predict_proba()` 메서드를 제공한다.
 
 
 
 - __ROC 곡선__ (Receiver Operating Characteristic, 수신기 조작 특성) : 이진분류에서 널리 사용된다. 정밀도/재현율 곡선과 비슷하지만 다르다.
 
-  - 거짓 양성 비율(FPR)에 대한 진짜 양성 비율(TPR, 재현율)의 곡선. 음성으로 정확하게 분류한 음성 샘플의 비율으로 구한다. FPR은 1에서 진짜 음성 비율(TNR, 특이도)을 뺀 값과도 같다.
+  - **거짓 양성 비율**(FPR)에 대한 **진짜 양성 비율**(TPR, 재현율)의 곡선. 음성으로 정확하게 분류한 음성 샘플의 비율으로 구한다. FPR은 1에서 **진짜 음성 비율**(TNR, 특이도)을 뺀 값과도 같다.
   
   $$
-  ROC\quad Curve = \frac{TPR}{FPR} = \frac{TPR}{1-TNR}
+  \text{ROC Curve} = \frac{\text{TPR}}{\text{FPR}} = \frac{\text{TPR}}{\text{1 - TNR}}
   $$
   
   - **AUC** : ROC 곡선 아래의 면적을 AUC라고 한다. 완전 랜덤한 분류기의 AUC는 0.5이며 완벽한 분류기의 AUC는 1이다. 
   
   ![AUC](https://t1.daumcdn.net/cfile/tistory/262E8E3F544837AD27)
   
-  
+
+- 오차 행렬, 정확도, 정밀도, 재현율, 그리고 ROC 곡선
+
+![ConfusionMatrix](https://miro.medium.com/max/625/1*y4HwoAEgx1Js19hCkPM7XA.png)
+
+그래프에서 $\text{TN = ①, FP = ②, FN = ③, TP = ④}$ 라고 하면 정확도, 정밀도, 재현율 등은 아래와 같이 표현된다.
+$$
+\text{Accuracy} = \frac{\text{TN + TP}}{\text{TN + FP + FN + TP}} = \frac{① + ④}{① +② + ③ + ④}
+$$
+
+$$
+\text{Precision} = \frac{\text{TP}}{\text{TP+FP}} = \frac{④}{②+④}
+$$
+
+$$
+\text{Recall} = \frac{\text{TP}}{\text{TP+FN}} = \frac{④}{③+④}
+$$
+
+$$
+\text{TPR} = \text{Recall} = \frac{\text{TP}}{\text{TP+FN}} = \frac{④}{③+④} \text{,     FPR} = \frac{\text{FP}}{\text{FP+TN}} = \frac{②}{① + ②} = 1 - \text{TNR} = 1 - \frac{①}{① + ②}
+$$
 
 <br/>
 
@@ -198,4 +218,4 @@ knn_clf.fit(X_train, y_multilabel)
 
 **다중 출력 다중 클래스 분류** (다중 출력 분류) : 다중 레이블 분류에서 한 레이블이 다중 클래스가 될 수 있도록 일반화한 것. MNIST 이미지의 노이즈를 제거하는 시스템을 만든다고 해보자. 분류기의 출력이 다중 레이블(1픽셀당 1레이블)이고 각 레이블은 여러 개의 값(0~255의 픽셀 농도)을 가짐. 그러면 이 시스템은 다중 출력 분류 시스템이 되어야 한다.
 
-[이 예시에서처럼 분류와 회귀 사이의 경계는 때때로 모호. 레이블의 픽셀 농도는 분류보다 회귀와 비슷. 게다가 다중 출력 시스템이 분류 작업에 국한되지도 않음.]
+[이 예시에서처럼 분류와 회귀 사이의 경계는 때때로 모호하다. 레이블의 픽셀 농도는 분류보다 회귀와 비슷하기 때문이다. 더구나 다중 출력 시스템은 분류 작업에 국한되지도 않는다.]
