--- a/_posts/2020-01-30-homl3.md
+++ b/_posts/2020-01-30-homl3.md
@@ -21,7 +21,7 @@ X_train, X_test, y_train, y_test = X[:60000], X[60000:], y[:60000], y[60000:]
 
 ## 2) 이진 분류기
 
-문제를 단순화해보자. 이를테면, 5인 것과 5가 아닌 것으로 분류하기로 하자. 이렇게 O와 X, 2개의 클래스로 분류하는 것을 이진 분류기(binary classifier)라고 한다. 본 문제에서는 이진 분류 모델로 확률적 경사 하강법(Stochastic Gradient Descent, SGD)을 사용한다. 사이킷런에서는 SGDClassifier를 제공한다.
+문제를 단순화해보자. 이를테면, 5인 것과 5가 아닌 것으로 분류하기로 하자. 이렇게 O와 X, 2개의 클래스로 분류하는 것을 이진 분류기(binary classifier)라고 한다. 본 문제에서는 이진 분류 모델로 확률적 경사 하강법(Stochastic Gradient Descent, SGD)을 사용한다. 사이킷런에서는 `SGDClassifier` 클래스를 제공한다. (확률적 경사 하강법에 대한 자세한 내용은 [이곳]([https://yngie-c.github.io/hands%20on%20machine%20learning/2020/02/01/homl4/](https://yngie-c.github.io/hands on machine learning/2020/02/01/homl4/)) 에서 볼 수 있다.)
 
 ```python
 y_train_5 = (y_train == 5)
@@ -64,7 +64,7 @@ sgd_clf.fit(X_train, y_train_5)
 
   ※ (특히 불균형한 데이터에서는) __정확도를 분류기의 성능 측정 지표로 선호하지 않는다.__ 
 
-- **오차 행렬** : 분류기의 성능을 평가하는 더 좋은 방법. '0'이 '1'로 잘못 분류된 횟수를 센다. 오차 행렬을 만들기 위해서는 실제 타깃과 비교할 수 있도록 먼저 예측값을 만들어야 한다. 사이킷런에서는 cross_val_predict() 함수를 제공한다.
+- **오차 행렬** : 분류기의 성능을 평가하는 더 좋은 방법. '0'이 '1'로 잘못 분류된 횟수를 센다. 오차 행렬을 만들기 위해서는 실제 타깃과 비교할 수 있도록 먼저 예측값을 만들어야 한다. 사이킷런에서는 `confusion_matrix()` 함수를 사용하여 오차행렬을 출력할 수 있다.
 
   ```python
   from sklearn.model_selection import cross_val_predict
@@ -72,16 +72,16 @@ sgd_clf.fit(X_train, y_train_5)
   
   from sklearn.metrics import confusion_matrix
   confusion_matrix(y_train_5, y_train_pred)
-  >>[[53272, 1307]
+  >>>[[53272, 1307]
      [ 1077, 4344]]
   ```
 
-  - 오차 행렬의 행은 실제 클래스를 나타내고 열은 예측 클래스를 나타낸다.
+  - 오차 행렬의 행은 **실제 클래스** 를 나타내고 열은 **예측 클래스** 를 나타낸다.
 
-  |              | 5 가 아닌 것으로 판단 | 5 로 판단 |
-  | ------------ | --------------------- | --------- |
-  | 실제로 5 (X) | 53272                 | 1307      |
-  | 실제로 5 (O) | 1077                  | 4344      |
+  |                | 5 가 아닌 것으로 판단 | 5 로 판단 |
+  | -------------- | --------------------- | --------- |
+  | *실제로 5 (X)* | 53272                 | 1307      |
+  | *실제로 5 (O)* | 1077                  | 4344      |
   
 - 정밀도와 재현율
 
@@ -121,15 +121,22 @@ f1_score(y_train_5, y_train_pred)
 - __ROC 곡선__ (Receiver Operating Characteristic, 수신기 조작 특성) : 이진분류에서 널리 사용된다. 정밀도/재현율 곡선과 비슷하지만 다르다.
 
   - **거짓 양성 비율**(FPR)에 대한 **진짜 양성 비율**(TPR, 재현율)의 곡선. 음성으로 정확하게 분류한 음성 샘플의 비율으로 구한다. FPR은 1에서 **진짜 음성 비율**(TNR, 특이도)을 뺀 값과도 같다.
-  
+
   $$
   \text{ROC Curve} = \frac{\text{TPR}}{\text{FPR}} = \frac{\text{TPR}}{\text{1 - TNR}}
   $$
+
+  > $TPR$ (민감도) : 실제 Positive값이 정확히 예측되어야 하는 수준 (도둑을 도둑으로 판정) = Recall
+  >
+  > $TNR$ (특이도) : 실제 Negative값이 정확히 예측되어야 하는 수준 (일반 시민을 일반 시민으로 판정)
+
+  다음은 ROC Curve를 그리기 위한 사이킷런 코드이다.
+
   
+
   - **AUC** : ROC 곡선 아래의 면적을 AUC라고 한다. 완전 랜덤한 분류기의 AUC는 0.5이며 완벽한 분류기의 AUC는 1이다. 
-  
+
   ![AUC](https://t1.daumcdn.net/cfile/tistory/262E8E3F544837AD27)
-  
 
 - 오차 행렬, 정확도, 정밀도, 재현율, 그리고 ROC 곡선
 
@@ -172,7 +179,7 @@ $$
   ovo_clf.fit(X_train, y_train)
   ```
 
-만약 샘플을 바로 다중 클래스로 분류할 수 있는 랜덤 포레스트 같은 경우에는 OvO나 OvA를 적용할 필요가 없다. predict_proba() 메서드를 호출하면 분류기가 각 샘플에 부여한 클래스별 확률을 얻을 수 있음.
+만약 샘플을 바로 다중 클래스로 분류할 수 있는 랜덤 포레스트 같은 경우에는 OvO나 OvA를 적용할 필요가 없다. `predict_proba()` 메서드를 호출하면 분류기가 각 샘플에 부여한 클래스별 확률을 얻을 수 있다.
 
 ```python
 forest_clf.fit(X_train, y_train)
