--- a/_posts/2020-01-30-homl3.md
+++ b/_posts/2020-01-30-homl3.md
@@ -83,9 +83,9 @@ sgd_clf.fit(X_train, y_train_5)
   | *실제로 5 (X)* | 53272                 | 1307      |
   | *실제로 5 (O)* | 1077                  | 4344      |
   
-- 정밀도와 재현율
+- **정밀도와 재현율**
 
-  - __정밀도__ (Precision)
+  - 정밀도(Precision)
 
   $$
   \text{Precision} = \frac{\text{TP}}{\text{TP+FP}}
@@ -93,7 +93,7 @@ sgd_clf.fit(X_train, y_train_5)
 
   ​			$TP$ : 진짜 양성의 수,  $FP$ : 거짓 양성의 수
 
-  - __재현율__ (Recall) : 민감도(sensitivity) 또는 진짜 양성 비율(true positive)이라고도 함
+  - 재현율 (Recall) : 민감도(sensitivity) 또는 진짜 양성 비율(true positive)이라고도 함
   
   $$
   \text{Recall} = \frac{\text{TP}}{\text{TP+FN}}
@@ -101,24 +101,42 @@ sgd_clf.fit(X_train, y_train_5)
 
   ​			$FN$ : 거짓 음성의 수
 
-  - __F1 점수__ (F1 Score) : 정밀도와 재현율의 조화평균으로 구해진다
+  - F1 점수 (F1 Score) : 정밀도와 재현율의 조화평균으로 구해진다
   
   $$
 F = \frac{2}{(1/\text{Precision})+(1/\text{Recall})} = \frac{\text{TP}}{\text{TP}+\frac{\text{FN+FP}}{2}}
   $$
 
-  사이킷런에서는 F1 점수를 계산하는 f1_score() 함수를 제공한다.
+  아래는 사이킷런에서 혼동행렬부터 F1점수까지 볼 수 있는 코드이다.
   
   ```python
-  from sklearn.metrics import f1_score
-f1_score(y_train_5, y_train_pred)
+  from sklearn.metrics import confusion_matrix, precision_score, recall_score, f1_score
+
+  confusion = confusion_matrix(y_train_5, y_train_pred)
+  precision = precision_score(y_train_5, y_train_pred)
+  recall = recall_score(y_train_5, y_train_pred)
+  f1 = f1_score(y_train_5, y_train_pred)
+  
+  print(confusion)
+  print(precision, recall, f1)
   ```
   
-  - __정밀도/재현율 트레이드오프__ : 정밀도를 올리면 재현율이 줄고, 재현율을 높이면 정밀도가 내려가기 마련. 특정 수치가 강조되어야 할 경우에는 분류의 결정 임곗값(Threshold)을 설정하여 정밀도 또는 재현율의 수치를 확보할 수 있다. 사이킷런의 분류 알고리즘은 개별 레이블 별로 결정 확률을 구한 후, 예측 확률이 큰 쪽을 예측하게 된다. (이진 분류기의 경우 50:50.) 사이킷런에서는 예측 확률을 반환하는 `predict_proba()` 메서드를 제공한다.
+  - **정밀도/재현율 트레이드오프** : 정밀도를 올리면 재현율이 줄고, 재현율을 높이면 정밀도가 내려가기 마련. 특정 수치가 강조되어야 할 경우에는 분류의 결정 임곗값(Threshold)을 설정하여 정밀도 또는 재현율의 수치를 확보할 수 있다. 사이킷런에서는 레이블을 분류하기 위해 `decision_function()` 과 `predict_proba()` 클래스를 제공한다. (두 클래스에 대한 설명은 [안수빈님 깃허브](https://subinium.github.io/MLwithPython-2-4/) 에서 더 자세하게 볼 수 있다.)
+    - **임곗값** (Threshold) : `decision_function()` 과 `predict_proba()` 의 리턴값으로부터 클래스(레이블)를 나누는 기준이 되는 값이다. 분류 결정 임곗값은 *Positive* 예측값을 결정하는 확률의 기준이 되므로 임곗값을 낮출수록 **Recall** 이 증가하게 된다. 하지만 FP 값 또한 올라가게 되면서 **Precision** 은 줄어들게 된다. 반대로 임곗값을 높이면 **Recall** 은 낮아지고 **Precision** 은 높아지게 된다.
+    - 정밀도-재현율 곡선 ( `precision_recall_curve()` ) : 여러 임곗값(일반적으로 0.11 ~ 0.95)을 담은 넘파이 ndarray와 이 임곗값에 해당하는 정밀도 및 재현율 값을 담은 넘파이 ndarray를 반환한다.
+  
+  ```python
+  from sklearn.metrics import precision_recall_curve
+  
+  pred_proba_class1 = sgd_clf.predict_proba(X_test)[:,1]
+  precisions, recalls, threshold = precision_recall_curve(y_test_5, pred_proba_class1)
+  ```
+  
+  - 정밀도와 재현율의 **맹점** : 정확도뿐만 아니라 정밀도와 재현율에도 맹점이 있다. 앞서 살펴본 것처럼 *Positive* 값을 높일수록 정밀도, 재현율 중 하나의 값이 올라간다. 예를 들어, 극단적으로 임곗값을 낮춘 경우 Recall 은 1에 가까워진다. 시민 1000명 속에 있는 10명의 도둑을 잡기위해 1000명 모두를 용의자로 잡아들이는 극단적인 일이 일어난다. 반대로 임곗값을 매우 높게 올리면 Precision이 1에 가까워진다. 정말 도둑같은 사람 하나를 용의자로 세워 맞춘 뒤, 나머지 도둑 9명을 포함한 999명의 시민을 도둑에서 제외할 때 이런 수치가 나오게 된다. 따라서, 정밀도나 재현율은 비즈니스에 맞게 조정되어야 하고, 한쪽에 적정한 가중치를 두거나 두 가지 모두 고려하는 F1점수를 참고하는 것이 좋다. 
 
 
 
-- __ROC 곡선__ (Receiver Operating Characteristic, 수신기 조작 특성) : 이진분류에서 널리 사용된다. 정밀도/재현율 곡선과 비슷하지만 다르다.
+- **ROC 곡선** (Receiver Operating Characteristic, 수신기 조작 특성) : 이진분류에서 널리 사용된다. 정밀도/재현율 곡선과 비슷하지만 다르다.
 
   - **거짓 양성 비율**(FPR)에 대한 **진짜 양성 비율**(TPR, 재현율)의 곡선. 음성으로 정확하게 분류한 음성 샘플의 비율으로 구한다. FPR은 1에서 **진짜 음성 비율**(TNR, 특이도)을 뺀 값과도 같다.
 
@@ -130,13 +148,30 @@ f1_score(y_train_5, y_train_pred)
   >
   > $TNR$ (특이도) : 실제 Negative값이 정확히 예측되어야 하는 수준 (일반 시민을 일반 시민으로 판정)
 
-  다음은 ROC Curve를 그리기 위한 사이킷런 코드이다.
+  사이킷런에서는 ROC Curve를 그리기 위한 `roc_curve()` 함수가 존재하며 함수는 FPR, TPR, Threshold를 리턴값으로 반환한다.
+
+  ```python
+  from sklearn.metrics import roc_curve
+  
+  pred_proba_class1 = sgd_clf.predict_proba(X_test)[:, 1]
+  fprs, tprs, thresholds = roc_curve(y_test, pred_proba_class1)
+  ```
 
   
 
-  - **AUC** : ROC 곡선 아래의 면적을 AUC라고 한다. 완전 랜덤한 분류기의 AUC는 0.5이며 완벽한 분류기의 AUC는 1이다. 
+  - **AUC** : ROC 곡선 아래의 면적을 AUC라고 한다. 완전 랜덤한 분류기의 AUC는 0.5이며 완벽한 분류기의 AUC는 1이다. 1에 가까워질 수록 좋은 수치이며 사이킷런에서는 `roc_auc_score()` 함수를 사용하여 구할 수 있다.
 
-  ![AUC](https://t1.daumcdn.net/cfile/tistory/262E8E3F544837AD27)
+  ```
+  from sklearn.metrics import roc_auc_score
+  
+  pred = sgd_clf.predict(X_test)
+  roc_score = roc_auc_score(y_test, pred)
+  print(roc_score)
+  ```
+
+  <p align="center"><img src="https://t1.daumcdn.net/cfile/tistory/262E8E3F544837AD27" alt="AUC" style="zoom:150%;" /></p>
+
+  
 
 - 오차 행렬, 정확도, 정밀도, 재현율, 그리고 ROC 곡선
 
