--- a/_posts/2020-02-06-homl6.md
+++ b/_posts/2020-02-06-homl6.md
@@ -27,13 +27,14 @@ tree_clf = DecisionTreeClassifier(max_depth=2)
 
 ## 2) 예측하기
 
-결정 트리는 다음과 같은 과정을 거쳐 예측을 만들어 낸다.[^1] **루트 노드** (Root Node)부터 샘플이 특정한 기준으로 나누어진다. 노드의 sample 속성은 얼마나 많은 훈련 샘플이 적용되었는지 나타내 준다. 이후 이 샘플의 개수를 통해 노드의 불순도를 측정한다. 이 불순도는 **지니** (Gini) 속성에 나타나게 된다. 한 노드의 모든 샘플이 하나의 클래스에 속해 있다면 이 노드의 지니 점수는 0이다. 아래는 지니 불순도를 계산하는 수식이다. <br/>
+결정 트리는 다음과 같은 과정을 거쳐 예측을 만들어 낸다.[^1] **루트 노드** (Root Node)부터 샘플이 특정한 기준으로 나누어진다. 노드의 sample 속성은 얼마나 많은 훈련 샘플이 적용되었는지 나타내 준다. 이후 이 샘플의 개수를 통해 노드의 불순도를 측정한다. 이 불순도는 **지니** (Gini) 속성에 나타나게 된다. 한 노드의 모든 샘플이 하나의 클래스에 속해 있다면 이 노드의 지니 점수는 0이다.
+
+- Gini Impurity
+
 $$
 G_i = 1 - \sum^n_{k=1} {p_{i,k}}^2
 $$
-<br/>
-
-- $p_{i,k}$ 는 $i$ 번째 노드에 있는 훈련 샘플 클래스 $k$ 에 속한 샘플의 비율이다.
+>  $p_{i,k}$ 는 $i$ 번째 노드에 있는 훈련 샘플 클래스 $k$ 에 속한 샘플의 비율이다.
 
 사이킷런은 이진 트리만 만드는 CART 알고리즘을 사용한다. 그러므로 리프 노드 외의 모든 노드는 자식 노드를 2개씩 가진다. 
 
@@ -63,18 +64,19 @@ $$
 
 예측을 하려면 결정 트리를 루트 노드에서부터 리프 노드까지 탐색해야 한다. 일반적인 결정 트리는 거의 균형을 이루고 있으므로 결정 트리를 탐색하기 위해서는 약 $O(\log_2(m))$ 개의 노드를 거쳐야 한다. 각 노드는 하나의 특성값만 확인하기에 복잡도는 특성 수에 상관 없이 $O(\log_2(m))$ 의 값을 가지게 된다.
 
-하지만 훈련 알고리즘은 다르다. 각 노드에서 훈련 샘플의 모든 특성을 비교해야 하기 때문에 훈련 복잡도가 $O(n*m\log_2(m))$ 이 된다. 훈련 세트가 작을 경우에 사이킷런에서는 `presort=True` 로 설정하여 미리 데이터를 정렬할 수 있고, 훈련 속도를 높일 수 있다. 하지만 훈련 세트가 클 경우에는 속도가 많이 느려지게 된다.
+하지만 훈련 알고리즘은 다르다. 각 노드에서 훈련 샘플의 모든 특성을 비교해야 하기 때문에 훈련 복잡도가 $O(n \times m\log_2(m))$ 이 된다. 훈련 세트가 작을 경우에 사이킷런에서는 `presort=True` 로 설정하여 미리 데이터를 정렬할 수 있고, 훈련 속도를 높일 수 있다. 하지만 훈련 세트가 클 경우에는 속도가 많이 느려지게 된다.
 
 <br/>
 
 ## 6) 지니 불순도 또는 엔트로피
 
-위에서 보았듯 결정 트리에서 일반적으로 사용되는 기준치는 지니 불순도다. 하지만 `criterion="entropy"` 로 설정하면 엔트로피 불순도를 사용할 수 있다. 엔트로피를 계산하는 식은 아래와 같다. <br/>
+위에서 보았듯 결정 트리에서 일반적으로 사용되는 기준치는 지니 불순도다. 하지만 `criterion="entropy"` 로 설정하면 엔트로피 불순도를 사용할 수 있다.
+
+- 엔트로피
+
 $$
 H_i = - \sum^n_{k=1 \\ p_{i,k}\neq 0} p_{i,k} \log_2(p_{i,k})
 $$
-<br/>
-
 엔트로피 식을 사용하더라도 한 샘플만을 담고 있는 세트의 엔트로피는 지니 불순도와 같이 0이 된다. 지니 불순도와 엔트로피 중 어떤 것을 사용하든 큰 차이는 없다. 하지만, 지니 계수에 대한 계산이 좀 더 빠르기 때문에 기본값으로 사용된다. 그리고 엔트로피는 지니 불순도로 형성된 트리보다 조금 더 균형 잡힌 트리를 만든다는 장점이 있다.
 
 <br/>
@@ -91,13 +93,17 @@ $$
 
 ## 8) 회귀
 
-결정 트리는 회귀에도 사용할 수 있다. 사이킷런에서는 `DecisionTreeRegressor` 를 사용하여 결정 트리를 사용한 회귀를 할 수 있다. 위에서 사용되었던 분류 모델과의 가장 큰 차이는 회귀 모델에서는 샘플이 특정 클래스가 아니라 특정 값으로 예측 된다는 점이다. CART 알고리즘은 불순도를 최소화 하는 방향으로 훈련 세트를 분할하는 대신 평균 제곱 오차(MSE)를 최소화하도록 분할하는 것을 제외하고는 위와 동일한 방식으로 작동한다. 회귀를 위한 CART 비용 함수는 아래와 같다.
+결정 트리는 회귀에도 사용할 수 있다. 사이킷런에서는 `DecisionTreeRegressor` 를 사용하여 결정 트리를 사용한 회귀를 할 수 있다. 위에서 사용되었던 분류 모델과의 가장 큰 차이는 회귀 모델에서는 샘플이 특정 클래스가 아니라 특정 값으로 예측 된다는 점이다. CART 알고리즘은 불순도를 최소화 하는 방향으로 훈련 세트를 분할하는 대신 평균 제곱 오차(MSE)를 최소화하도록 분할하는 것을 제외하고는 위와 동일한 방식으로 작동한다.
+
+- CART Cost Function
+
 $$
 J(k, t_k) = \frac{m_{\text{left}}}{m}MSE_{\text{left}} + \frac{m_{\text{right}}}{m}MSE_{\text{right}}
 $$
 
-- $MSE_{node} = \sum_{i \in \text{node}} (\hat{y}_{\text{node}} - y^{(i)})^2$
-- $\hat{y}_{\text{node}} = \frac{1}{m_{node}} \sum_{i \in \text{node}} y^{(i)}$
+>  $MSE_{node} = \sum_{i \in \text{node}} (\hat{y}_{\text{node}} - y^{(i)})^2$
+>
+> $\hat{y}_{\text{node}} = \frac{1}{m_{node}} \sum_{i \in \text{node}} y^{(i)}$
 
 결정 트리는 분류 모델에서도 그랬던 것처럼 회귀에서도 과대적합되기가 쉽다. 그렇기 때문에 다양한 파라미터를 조정하여 결정 트리를 규제한다면 훨씬 더 일반화된 모델을 만들어낼 수 있을 것이다.
 
