--- a/_posts/2020-02-05-homl5.md
+++ b/_posts/2020-02-05-homl5.md
@@ -17,13 +17,13 @@ tag: Machine-Learning
 
 아래의 그림을 보자. 왼쪽 3개의 직선은 선형 분류 모델에 의해 분류된 결정 경계이다. 그 중 점선은 데이터셋을 적절하게 분류하지 못하고 있고, 나머지 2개의 직선은 분류는 제대로 하고 있으나 결정 경계가 샘플과 너무 가까워 새로운 샘플에는 잘 작동하지 못할 확률이 있다. 반면, 오른쪽 직선은 SVM에 의해 형성된 결정 경계다. 이 직선은 두 개의 클래스를 나누고 있을 뿐만 아니라 제일 가까운 훈련 샘플로부터 가능한 한 멀리 떨어져있기도 하다. SVM된 분류기를 이런 특징에 따라 SVM 분류기를 **라지 마진 분류** (Large Margin Classification)라고도 한다.
 
-
+<p align="center"><img src="https://i.imgur.com/DYoJdfp.jpg" style="zoom: 25%;" /></p>
 
 결정 경계가 도로 경계에 위치한 샘플에 의해 전적으로 결정되기 때문에 도로 바깥쪽에는 훈련 샘플을 더 추가하더라도 결정 경계는 변하지 않는다. 이렇게 도로 경계에 있는 샘플을 **서포트 벡터** (Support Vector)라고 한다. 서포트 벡터는 특성의 스케일에 굉장히 민감하므로 특성 스케일링을 해주면 결정 경계가 훨씬 좋아진다.
 
 **소프트 마진 분류** (Soft Margin Classification) : 위 그림처럼 모든 샘플을 도로 바깥쪽으로 분류하는 것을 **하드 마진 분류** (Hard Margin Classification) 라고 한다. 하드 마진 분류는 데이터를 선형적으로 구분할 수 있을 때에만 제대로 작동하며, 이상치에 민감하다는 문제점이 있다. 이런 문제를 피하기 위해서 유연한 모델이 필요한데, 이를 **소프트 마진 분류** (Soft Margin Classification)라고 한다. 소프트 마진 분류에서는 샘플이 잘못 분류되는 마진 오류와 도로의 폭을 가능한 한 넓게 유지하는 것 사이의 균형을 잡는 것이 중요해진다.
 
-
+<p align="center"><img src="https://miro.medium.com/max/1277/1*M_3iYollNTlz0PVn5udCBQ.png" style="zoom: 33%;" /></p>
 
 사이킷런의 SVM 모델에서는 하이퍼파라미터 C를 사용하여 이 균형을 조절할 수 있다. C값을 줄이면 도로의 폭이 넓어지지만 마진 오류도 커진다. 반대로 C값이 커질수록 도로의 폭이 줄어들지만 마진 오류 또한 줄어들게 된다. 사이킷런에서는 다음과 같은 코드로 SVM 모델을 학습시킬 수 있다.
 
@@ -71,7 +71,7 @@ poly_kernel_svm_clf = Pipeline([
 poly_kernel_svm_clf.fit(X,y)
 ```
 
-위 코드에서는 3차 다항식이 되도록 사용했다. 모델이 과대적합이라면 다항식의 차수를 줄여야 하며, 과소적합이라면 다항식의 차수를 늘려야 한다. 하이퍼파라미터 coef0는 모델이 높은 차수와 낮은 차수에 얼마나 영향을 받을지 조절한다.
+위 코드에서는 3차 다항식이 되도록 사용했다. 모델이 과대적합이라면 다항식의 차수를 줄여야 하며, 과소적합이라면 다항식의 차수를 늘려야 한다. 하이퍼파라미터 `coef0` 는 모델이 높은 차수와 낮은 차수에 얼마나 영향을 받을지 조절한다.
 
 - **유사도 특성 추가** : 유사도 특성 추가는 비선형 특성을 다루는 또 다른 기법이다. 샘플이 특정 **랜드마크** (landmark)와 얼마나 닮았는지 측정하는 **유사도 함수** (similarity function) 로 계산한 특성을 추가한다. 유사도 함수는 다음과 같다.
 
@@ -176,7 +176,7 @@ $$
 
 
 
-- 하드 마진과 소프트 마진 문제처럼 선형적인 제약 조건이 있는 볼록 함수의 이차 최적화 문제를 일컬어 **콰드라틱 프로그래밍** (Quadratic Programming, QP) 문제라고 한다. QP 문제를 해결하는 일반적인 문제 공식은 다음과 같다.
+- 하드 마진과 소프트 마진 문제처럼 선형적인 제약 조건이 있는 볼록 함수의 이차 최적화 문제를 ';'일컬어 **콰드라틱 프로그래밍** (Quadratic Programming, QP) 문제라고 한다. QP 문제를 해결하는 일반적인 문제 공식은 다음과 같다.
 
 $$
 \text{minimize} \quad \frac{1}{2} \mathbf{p}^T \cdot \mathbf{H} \cdot \mathbf{p} + \mathbf{f}^T \cdot \mathbf{p} \qquad \text{when } \mathbf{A} \cdot \mathbf{p} \leq \mathbf{b}
