--- a/_posts/2020-01-28-homl1.md
+++ b/_posts/2020-01-28-homl1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 1. Machine Learning Landscape
+title: 1. 한눈에 보는 머신러닝
 category: Hands on Machine Learning
 tag: Machine-Learning
 ---
