--- a/_posts/2020-01-29-homl2.md
+++ b/_posts/2020-01-29-homl2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2. End to End ML Project
+title: 2. 머신러닝 프로젝트 처음부터 끝까지
 category: Hands on Machine Learning
 tag: Machine-Learning
 ---
@@ -150,7 +150,6 @@ pipeline = Pipeline([
   - '폴드(fold)'라고 불리는 K개의 서브셋으로 무작위로 분할한 후 그 중 하나를 검증 세트로 하는 K개의 데이터 셋을 만든다. (아래 그림에서의 Test set는 Validation set과 같은 의미이다.)
 
 <p align="center"><img src="https://cdn-images-1.medium.com/max/1600/1*rgba1BIOUys7wQcXcL4U5A.png" alt="KFold" style="zoom:50%;" /></p>
-
 사이킷런에서는 K-겹 교차검증을 위해 `KFold` 와 `StratifiedKFold` 클래스를 제공하고 있다. `StratifedKFold` 는 데이터셋의 불균형한 분포도를 가진 레이블 데이터 집합을 위한 K폴드 방식이다. 아래는 사이킷런에서 이들을 적용할 수 있는 코드이다.
 
 ```python
