--- a/_posts/2020-01-30-homl3.md
+++ b/_posts/2020-01-30-homl3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 3. Classification
+title: 3. 분류
 category: Hands on Machine Learning
 tag: Machine-Learning
 ---
@@ -170,8 +170,6 @@ F = \frac{2}{(1/\text{Precision})+(1/\text{Recall})} = \frac{\text{TP}}{\text{TP
   ```
 
   <p align="center"><img src="https://t1.daumcdn.net/cfile/tistory/262E8E3F544837AD27" alt="AUC" style="zoom:150%;" /></p>
-
-  
 
 - 오차 행렬, 정확도, 정밀도, 재현율, 그리고 ROC 곡선
 
