--- a/_posts/2020-02-06-homl6.md
+++ b/_posts/2020-02-06-homl6.md
@@ -34,6 +34,9 @@ tree_clf = DecisionTreeClassifier(max_depth=2)
 $$
 G_i = 1 - \sum^n_{k=1} {p_{i,k}}^2
 $$
+
+
+
 >  $p_{i,k}$ 는 $i$ 번째 노드에 있는 훈련 샘플 클래스 $k$ 에 속한 샘플의 비율이다.
 
 사이킷런은 이진 트리만 만드는 CART 알고리즘을 사용한다. 그러므로 리프 노드 외의 모든 노드는 자식 노드를 2개씩 가진다. 
@@ -48,13 +51,19 @@ $$
 
 ## 4) CART 훈련 알고리즘
 
-사이킷런은 결정 트리를 훈련시키기 위해 **CART** (Classification And Regression Tree) 알고리즘을 사용한다. 먼저 훈련 세트를 하나의 특성 $k$ 의 임곗값 $t_k$ 를 사용하여 두 개의 서브셋으로 나눈다. 여기서 $k$ 와 $t_k$ 의 순서쌍 $(k, t_k)$ 는 아래의 비용 함수를 최소화하는 지점으로 결정된다. <br/>
+사이킷런은 결정 트리를 훈련시키기 위해 **CART** (Classification And Regression Tree) 알고리즘을 사용한다. 먼저 훈련 세트를 하나의 특성 $k$ 의 임곗값 $t_k$ 를 사용하여 두 개의 서브셋으로 나눈다. 여기서 $k$ 와 $t_k$ 의 순서쌍 $(k, t_k)$ 는 아래의 비용 함수를 최소화하는 지점으로 결정된다.
+
+- CART Cost Function
+
 $$
 J(k, t_k) = \frac{m_{\text{left}}}{m}G_{\text{left}} + \frac{m_{\text{right}}}{m}G_{\text{right}}
 $$
 
-- $G_{\text{left/right}}$ : 왼쪽 / 오른쪽 서브셋의 불순도 
-- $m_{\text{left/right}}$ : 왼쪽 / 오른쪽 서브셋의 샘플 수
+
+
+> $G_{\text{left/right}}$ : 왼쪽 / 오른쪽 서브셋의 불순도 
+>
+> $m_{\text{left/right}}$ : 왼쪽 / 오른쪽 서브셋의 샘플 수
 
 훈련 세트를 성공적으로 둘로 나누면 같은 방식으로 서브셋을 계속 나누어간다. 그러다가 최대 깊이에 도달하거나, 불순도를 줄이는 분할을 찾을 수 없게 되면 멈추게 된다.[^2]
 
@@ -72,7 +81,7 @@ $$
 
 위에서 보았듯 결정 트리에서 일반적으로 사용되는 기준치는 지니 불순도다. 하지만 `criterion="entropy"` 로 설정하면 엔트로피 불순도를 사용할 수 있다.
 
-- 엔트로피
+- 엔트로피(Entropy)
 
 $$
 H_i = - \sum^n_{k=1 \\ p_{i,k}\neq 0} p_{i,k} \log_2(p_{i,k})
