--- a/_posts/2020-02-06-homl6.md
+++ b/_posts/2020-02-06-homl6.md
@@ -15,7 +15,7 @@ tag: Machine-Learning
 
 ## 1) 결정 트리 학습과 시각화
 
-사이킷런에서 결정 트리(분류)는 DecisionTreeClassifier() 클래스를 통해 학습시킬 수 있다.
+사이킷런에서 결정 트리(분류)는 `DecisionTreeClassifier()` 클래스를 통해 학습시킬 수 있다.
 
 ```python
 from sklearn.tree import DecisionTreeClassifier
@@ -86,6 +86,9 @@ $$
 $$
 H_i = - \sum^n_{k=1 \\ p_{i,k}\neq 0} p_{i,k} \log_2(p_{i,k})
 $$
+
+
+
 엔트로피 식을 사용하더라도 한 샘플만을 담고 있는 세트의 엔트로피는 지니 불순도와 같이 0이 된다. 지니 불순도와 엔트로피 중 어떤 것을 사용하든 큰 차이는 없다. 하지만, 지니 계수에 대한 계산이 좀 더 빠르기 때문에 기본값으로 사용된다. 그리고 엔트로피는 지니 불순도로 형성된 트리보다 조금 더 균형 잡힌 트리를 만든다는 장점이 있다.
 
 <br/>
