--- a/_posts/2020-02-06-homl6.md
+++ b/_posts/2020-02-06-homl6.md
@@ -95,7 +95,7 @@ $$
 
 ## 7) 규제 매개변수
 
-결정 트리는 훈련 데이터에 대한 제약 사항이 거의 없다는 장점을 가지고 있다. 결정 트리는 훈련되기 전에 파라미터 수가 결정되지 않는 **비파라미터 모델** (Parametric Model)이다. 비파라미터 모델은 학습 데이터에 맞추기 때문에 자유롭지만, 과대적합되기 쉽다는 단점이 있다.
+결정 트리는 훈련 데이터에 대한 제약 사항이 거의 없다는 장점을 가지고 있다. 결정 트리는 훈련되기 전에 파라미터 수가 결정되지 않는 **비파라미터 모델** (Parametric Model)이다. 비파라미터 모델은 학습 데이터에 맞추기 때문에 자유롭지만, 과적합되기 쉽다는 단점이 있다.
 
 결정 트리의 과대적합을 피하기 위해서 학습할 때 결정 트리의 자유도를 제한할 필요가 있다. 보통은 결정 트리의 최대 깊이를 설정함으로서 자유도를 제한한다. 사이킷런에서는 `max_depth` 매개변수를 조정하여 결정 트리의 최대 깊이를 설정할 수 있다.
 
